network-policy/dev-deny.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  namespace: dev
  name: default.dev-deny
spec:
  order: 1000
  selector: k8s-app != "kube-dns"
  types:
  - Ingress
  - Egress
