network-policy/external-control.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: dev-control
  namespace: dev
spec:
  selector: all()
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    destination:
      selector: role == "allow"
